--- a/main.html
+++ b/main.html
@@ -2,9 +2,14 @@
 <html lang=da dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="description" content="Økologiske produkter">
+    <meta name="keywords" content="sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevare,biodynamisk,velvære,naturkost">
+    <title>Naturkost Odense - catchy slogan-ish</title>
   </head>
   <body>
+    <main>
 
+    <h1>Økologiske produkter</h1>
+    </main>
   </body>
 </html>
