--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Økologiske produkter">
     <meta name="keywords" content="sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevare,biodynamisk,velvære,naturkost">
-    <title>Naturkost Odense - catchy slogan-ish</title>
+    <title>Naturkost Odense - Selvfølgelig!</title>
   </head>
   <body>
     <main>
