oprettet css og linket

--- a/main.html
+++ b/main.html
@@ -2,6 +2,7 @@
 <html lang=da dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link href="styling.css" rel="stylesheet" type="text/css">
     <meta name="description" content="Økologiske produkter">
     <meta name="keywords" content="sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevare,biodynamisk,velvære,naturkost">
     <title>Naturkost Odense - Sammen skaber vi forandring</title>
