--- a/omnaturkost.html
+++ b/omnaturkost.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<html lang=da dir="ltr">
   <head>
 	   <title>Naturkost Odense</title>
       <meta name=”description” content=”Økologiske produkter”>
