--- a/omnaturkost.html
+++ b/omnaturkost.html
@@ -2,6 +2,7 @@
 <html>
 <html lang=da dir="ltr">
   <head>
+	<meta charset="utf-8">
 	   <title>Naturkost Odense</title>
       <meta name=”description” content=”Økologiske produkter”>
       <meta name=”keywords” content=”sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevarer,biodynamisk,velvære,naturkost”>
