--- a/kurv.html
+++ b/kurv.html
@@ -5,11 +5,28 @@
     <link href="styling.css" rel="stylesheet" type="text/css">
     <meta name="description" content="Økologiske produkter">
     <meta name="keywords" content="sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevare,biodynamisk,velvære,naturkost">
-    <title>Kurv - Naturkost Odense</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <title>Din kruv - Naturkost Odense</title>
   </head>
   <body>
+<!-- HEADER -->
+    <header>
+      <h1>KURV</h1>
+      <div id="headericons">
+        <a href="kurv.html"><img src="img/ikoner/tekaffe.png" alt="kurv"></a>
+        <a href="burger"><div id="burgermenu">
+          <div class="burger"></div>
+          <div class="burger"></div>
+          <div class="burger"></div>
+        </div></a>
+      </div>
+    </header>
+<!-- MAIN -->
     <main>
-    <h1>KURV</h1>
+      <section id="kurvsection"></section>
+      <button type="button" name="button">Til kassen</button>
     </main>
+<!-- FOOTER -->
+    <footer></footer>
   </body>
 </html>
