--- a/kontakt.html
+++ b/kontakt.html
@@ -5,13 +5,45 @@
     <link href="styling.css" rel="stylesheet" type="text/css">
     <meta name="description" content="Økologiske produkter">
     <meta name="keywords" content="sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevare,biodynamisk,velvære,naturkost">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <title>Kontakt - Naturkost Odense</title>
   </head>
   <body>
+<!-- HEADER -->
     <header>
       <h1>KONTAKT</h1>
+      <div id="headericons">
+        <a href="kurv.html"><img src="img/ikoner/tekaffe.png" alt="kurv"></a>
+        <a href="burger"><div id="burgermenu">
+          <div class="burger"></div>
+          <div class="burger"></div>
+          <div class="burger"></div>
+        </div></a>
+      </div>
     </header>
+<!-- MAIN -->
     <main>
+      <img src="" alt="kontaktbillede">
+      <section id="kontaktsbox">
+        <h2>Kontakt naturkost</h2>
+        <!-- ADRESSE -->
+        <h3>Adresse</h3>
+        <p>Gravene 8, 5000 Odense C</p>
+        <!-- MAIL -->
+        <h3>Mail</h3>
+        <p>mail@naturkost-odense.dk</p>
+        <!-- TELEFON -->
+        <h3>Telefon</h3>
+        <p>+45 6613 7013</p>
+        <p>Mandag-fredag kl. 9.00-17.30</p>
+        <!-- ÅBNINGSTIDER -->
+        <h3>Åbningstider</h3>
+        <p>Mandag-torsdag kl. 9.00-17.30</p>
+        <p>Fredag kl. 9.00-18.00</p>
+        <p>Lørdag kl. 9.00-14.00</p>
+      </section>
     </main>
+<!-- FOOTER -->
+    <footer></footer>
   </body>
 </html>
