Add JavaScript file in HTML
'javascript.js'

--- a/kurv.html
+++ b/kurv.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Økologiske produkter">
     <meta name="keywords" content="sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevare,biodynamisk,velvære,naturkost">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <script src="javascript.js"></script>
     <title>Din kruv - Naturkost Odense</title>
   </head>
   <body>
