--- a/omnaturkost.html
+++ b/omnaturkost.html
@@ -7,18 +7,8 @@
       <meta name=”description” content=”Økologiske produkter”>
       <meta name=”keywords” content=”sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevarer,biodynamisk,velvære,naturkost”>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <style>
-        body {
-          background-color: #F4DDC0;
-        }
 
-        @media screen and (min-width: 480px) {
-          #leftsidebar {width: 200px; float: left;}
-          #main {margin-left: 216px;}
-          #video1 {width: 100%; float: left;}
-        }
-      </style>
-      <link rel="" type="text/css" href="css.css">
+      <link href="styling.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
