add img, HTML content

--- a/kurv.html
+++ b/kurv.html
@@ -24,8 +24,28 @@
     </header>
 <!-- MAIN -->
     <main>
-      <section id="kurvsection"></section>
-      <button type="button" name="button">Til kassen</button>
+
+      <section id="kurvsection">
+        <div class="kurvprodukt">
+          <div class="kurvslet"><p class="sletplusminus">&times;</p></div>
+          <div class="kurvbillede">
+            <img src="img/ikoner/toej.png" alt="kurvplusikon">
+          </div>
+          <div class="kurvbeskrivelse"><p>TEST, test, test</p></div>
+          <div class="kurvplusminus">
+            <button type="button" name="button" class="kurvplusknap"><p class="sletplusminus">&plus;</p></button>
+            <input type="text" name="" value="1">
+            <button type="button" name="button" class="kurvminusknap"><p class="sletplusminus">&minus;</p></button>
+          </div>
+          <div class="kurvproduktpris"><p>150kr</p></div>
+        </div>
+        <div class="kurvptotalpris"><p>350kr</p></div>
+      </section>
+
+      <button type="button" name="button" class="tilkassen">Til kassen</button>
+
+<button type="button" name="button" class="testknap"><p class="test">&plus;</p></button>
+
     </main>
 <!-- FOOTER -->
     <footer></footer>
