--- a/kurv.html
+++ b/kurv.html
@@ -24,10 +24,9 @@
     </header>
 <!-- MAIN -->
     <main>
-
       <section id="kurvsection">
         <div class="kurvprodukt">
-          <div class="kurvslet"><p class="sletplusminus">&times;</p></div>
+          <button type="button" name="button" class="kurvsletknap"><p class="sletplusminus">&plus;</p></button>
           <div class="kurvbillede">
             <img src="img/ikoner/toej.png" alt="kurvplusikon">
           </div>
@@ -35,17 +34,13 @@
           <div class="kurvplusminus">
             <button type="button" name="button" class="kurvplusknap"><p class="sletplusminus">&plus;</p></button>
             <input type="text" name="" value="1">
-            <button type="button" name="button" class="kurvminusknap"><p class="sletplusminus">&minus;</p></button>
+            <button type="button" name="button" class="kurvminusknap"><p class="sletplusminus">&times;</p></button>
           </div>
           <div class="kurvproduktpris"><p>150kr</p></div>
         </div>
         <div class="kurvptotalpris"><p>350kr</p></div>
       </section>
-
       <button type="button" name="button" class="tilkassen">Til kassen</button>
-
-<button type="button" name="button" class="testknap"><p class="test">&plus;</p></button>
-
     </main>
 <!-- FOOTER -->
     <footer></footer>
