edit af main+style

--- a/main.html
+++ b/main.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
 <html lang=da dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link href="styling.css" rel="stylesheet" type="text/css">
-    <meta name="description" content="Økologiske produkter">
-    <meta name="keywords" content="sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevare,biodynamisk,velvære,naturkost">
-    <title>Naturkost Odense - Sammen skaber vi forandring</title>
-  </head>
-  <body>
-    <main>
+
+<head>
+  <meta charset="utf-8">
+  <title>Naturkost Odense</title>
+  <meta name="description" content="Økologiske produkter">
+  <meta name="keywords" content="sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevare,biodynamisk,velvære,naturkost">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="styling.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+  <main>
 
     <h1>Økologiske produkter</h1>
-    </main>
-  </body>
+
+    <section>
+      <article class="flexbg">
+        <h2 id="mad">MAD</h2>
+      </article>
+      <article class="flexbg">
+        <h2 id="hverdag">HVERDAG</h2>
+      </article>
+      <article class="flexbg">
+        <h2 id="sundhed">SUNDHED</h2>
+      </article>
+      <article class="flexbg">
+        <h2 id="andet">ANDET</h2>
+      </article>
+    </section>
+
+  </main>
+</body>
+
 </html>
