--- a/omnaturkost.html
+++ b/omnaturkost.html
@@ -16,15 +16,15 @@
 
       <nav>
         <div class="logo">
-          <img src="logo/naturkostlogo.png" alt="Naturkost Odense - Sammen skaber vi forandring" height="100%px" width="100%">
+          <img src="logo/naturkostlogo.png" alt="Naturkost Odense" height="100%px" width="100%">
         </div>
 
-        <div class=kurv">
-          <img src="iconer/kurv.png" alt="tryk her for at se din kurv" heigth="10px" width="10px">
+        <div class="kurv">
+          <img src="iconer/kurv.png" alt="tryk her for at se din kurv" height="10px" width="10px">
         </div>
 
         <div class="menu">
-          <img src="iconer/menuicon.png" alt="tryk her for at se menu" heigth="10px" width="10px">
+          <img src="iconer/menuicon.png" alt="tryk her for at se menu" height="10px" width="10px">
         </div>
 
       </nav>
