--- a/andet.html
+++ b/andet.html
@@ -2,15 +2,15 @@
 <html lang=da dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta charset="utf-8">
        <title>Naturkost Odense</title>
         <meta name=”description” content=”Økologiske produkter”>
         <meta name=”keywords” content=”sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevarer,biodynamisk,velvære,naturkost”>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="styling.css" rel="stylesheet" type="text/css">
-
   </head>
   <body>
-
+    <main>
+        <h1>Andet</h1>
+    </main>
   </body>
 </html>
