add 'kurv.png', javascript, kontakt, styling
'kurv.png', 'javascript.js', 'kontakt.html', 'kurv.html', styling.css'

--- a/kontakt.html
+++ b/kontakt.html
@@ -13,7 +13,7 @@
     <header>
       <h1>KONTAKT</h1>
       <div id="headericons">
-        <a href="kurv.html"><img src="img/ikoner/tekaffe.png" alt="kurv"></a>
+        <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
         <a href="burger"><div id="burgermenu">
           <div class="burger"></div>
           <div class="burger"></div>
