--- a/main.html
+++ b/main.html
@@ -17,16 +17,20 @@
 
     <section>
       <article class="flexbg">
-        <h2 id="mad">MAD</h2>
+       <a class="front" href="mad.html">
+        <h2>MAD</h2></a>
       </article>
       <article class="flexbg">
-        <h2 id="hverdag">HVERDAG</h2>
+        <a class="front" href="hverdag.html">
+        <h2>HVERDAG</h2></a>
       </article>
       <article class="flexbg">
-        <h2 id="sundhed">SUNDHED</h2>
+        <a class="front" href="sundhed.html">
+        <h2>SUNDHED</h2></a>
       </article>
       <article class="flexbg">
-        <h2 id="andet">ANDET</h2>
+        <a class="front" href="andet.html">
+        <h2>ANDET</h2></a>
       </article>
     </section>
 
