Add to kurv and javaScript
'kruv.html' & 'JavaScript.js'

--- a/kurv.html
+++ b/kurv.html
@@ -67,9 +67,9 @@
           </div>
           <input type="button" class="kurvproduktpris" value="350" id="produktpris3">
         </div>
-        <div class="kurvptotalpris">
-          <h3>TOTAL</h3><p>350kr</p>
-        </div>
+
+        <input type="text" class="kurvptotalpris" value="750" id="totalpris">
+
         <a href="#"><button type="button" name="button" class="tilkassen">Til kassen</button></a>
       </section>
     </main>
