--- a/main.html
+++ b/main.html
@@ -11,30 +11,37 @@
 </head>
 
 <body>
-  <main>
 
     <h1>Økologiske produkter</h1>
 
-    <section>
-      <article class="flexbg">
-       <a class="front" href="mad.html">
-        <h2>MAD</h2></a>
-      </article>
-      <article class="flexbg">
-        <a class="front" href="hverdag.html">
-        <h2>HVERDAG</h2></a>
-      </article>
-      <article class="flexbg">
-        <a class="front" href="sundhed.html">
-        <h2>SUNDHED</h2></a>
-      </article>
-      <article class="flexbg">
-        <a class="front" href="andet.html">
-        <h2>ANDET</h2></a>
-      </article>
+    <div class="wrapper">
+    <section class="container1">
+      <img class="front1" src="img/ikoner/mad.png" alt="tallerken med bestik">
+        <a class="frontlink" href="mad.html">
+          <article class="front1text"><h2>Mad</h2></article></a>
+
     </section>
 
-  </main>
+    <section class="container2">
+      <img class="front2" src="img/ikoner/hverdag.png" alt="vækkeur">
+        <a class="frontlink" href="hverdag.html">
+          <article class="front2text"><h2>Hverdag</h2></article></a>
+    </section>
+
+    <section class="container3">
+      <img class="front3" src="img/ikoner/sundhed.png" alt="pilleglas">
+        <a class="frontlink" href="sundhed.html">
+          <article class="front3text"><h2>Sundhed</h2></article></a>
+    </section>
+
+    <section class="container4">
+      <img class="front4" src="img/ikoner/andet.png" alt="bunkepapir">
+        <a class="frontlink" href="andet.html">
+          <article class="front4text"><h2>Andet</h2></article></a>
+    </section>
+  </div>
+
+
 </body>
 
 </html>
