Change styling, kurv and JavaScript
'styling.css', 'kurv.html' & 'javascript.js'

--- a/kurv.html
+++ b/kurv.html
@@ -67,9 +67,10 @@
           </div>
           <input type="button" class="kurvproduktpris" value="350" id="produktpris3">
         </div>
-
-        <input type="text" class="kurvptotalpris" value="750" id="totalpris">
-
+        <div class="kurvtotal">
+          <input type="text" class="kurvtotalvarer" value="3" id="totalvarer">
+          <input type="text" class="kurvtotalpris" value="750" id="totalpris">
+        </div>
         <a href="#"><button type="button" name="button" class="tilkassen">Til kassen</button></a>
       </section>
     </main>
