--- a/main.html
+++ b/main.html
@@ -11,8 +11,17 @@
 </head>
 
 <body>
-
-    <h1>Økologiske produkter</h1>
+  <header>
+    <h1>Velkommen</h1>
+    <div id="headericons">
+      <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
+      <a href="burger"><div id="burgermenu">
+        <div class="burger"></div>
+        <div class="burger"></div>
+        <div class="burger"></div>
+      </div></a>
+    </div>
+  </header>
 
     <div class="wrapper">
     <section class="container1">
