--- a/kurv.html
+++ b/kurv.html
@@ -31,7 +31,7 @@
           <div class="kurvbillede">
             <img src="img/ikoner/mad.png" alt="kurvproduktbillede">
           </div>
-          <div class="kurvbeskrivelse"><p>Et prudukt under 'Mad'-katagorien</p></div>
+          <div class="kurvbeskrivelse"><p>Et produkt under 'Mad'-katagorien</p></div>
           <div class="kurvplusminus">
             <button type="button" class="kurvminusknap" onclick="minusKnap1()">&minus;</button>
             <input type="button" value="1" id="kurvproduktantal1">
@@ -45,7 +45,7 @@
           <div class="kurvbillede">
             <img src="img/ikoner/hverdag.png" alt="kurvproduktbillede">
           </div>
-          <div class="kurvbeskrivelse"><p>Et prudukt under 'Hverdag'-katagorien</p></div>
+          <div class="kurvbeskrivelse"><p>Et produkt under 'Hverdag'-katagorien</p></div>
           <div class="kurvplusminus">
             <button type="button" class="kurvminusknap" onclick="minusKnap2()">&minus;</button>
             <input type="button" value="1" id="kurvproduktantal2">
@@ -59,7 +59,7 @@
           <div class="kurvbillede">
             <img src="img/ikoner/sundhed.png" alt="kurvproduktbillede">
           </div>
-          <div class="kurvbeskrivelse"><p>Et prudukt under 'Sundhed'-katagorien</p></div>
+          <div class="kurvbeskrivelse"><p>Et produkt under 'Sundhed'-katagorien</p></div>
           <div class="kurvplusminus">
             <button type="button" class="kurvminusknap" onclick="minusKnap3()">&minus;</button>
             <input type="button" value="1" id="kurvproduktantal3">
