--- a/mad.html
+++ b/mad.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
 <html lang=da dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link href="styling.css" rel="stylesheet" type="text/css">
-    <meta name="description" content="Økologiske produkter">
-    <meta name="keywords" content="sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevare,biodynamisk,velvære,naturkost">
-    
-      <title>Naturkost Odense - Noobs</title>
-  </head>
-  <body>
 
-<header>
+<head>
+  <meta charset="utf-8">
+  <link href="styling.css" rel="stylesheet" type="text/css">
+  <meta name="description" content="Økologiske produkter">
+  <meta name="keywords" content="sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevare,biodynamisk,velvære,naturkost">
+
+  <title>Naturkost Odense - Mad</title>
+</head>
+
+<body>
+
+  <header>
 
     <h1>Mad</h1>
 
     <div id="headericons">
-            <img src="img/ikoner/kurv.png" alt="kurv">      
-        <a href="burger">
-         <div id="burgermenu">
-            <div class="burger"></div>
-            <div class="burger"></div>
-            <div class="burger"></div>
+      <img src="img/ikoner/kurv.png" alt="kurv">
+      <a href="burger">
+        <div id="burgermenu">
+          <div class="burger"></div>
+          <div class="burger"></div>
+          <div class="burger"></div>
         </div>
 
-        </a>
-    
+      </a>
+
     </div>
 
-</header>  
+  </header>
 
- <ul class="menu">
+  <ul class="menu">
 
     <li><a href="mad.html">Frugt og Grøn</a></li>
     <li><a href="mad.html">Grød</a></li>
@@ -40,40 +42,41 @@
     <li><a href="mad.html">Te og Kaffe</a></li>
 
     <main>
-    <h2>Frugt og grøn</h2>
+      <h2>Frugt og grøn</h2>
 
 
-        <br>
+      <br>
 
-    <h2>Grød</h2>
+      <h2>Grød</h2>
 
-        <br>
+      <br>
 
-    <h2>Mel</h2>
+      <h2>Mel</h2>
 
-        <br>
+      <br>
 
-    <h2>Pasta</h2>
+      <h2>Pasta</h2>
 
-        <br>
+      <br>
 
-    <h2>Saft</h2>
+      <h2>Saft</h2>
 
-        <br>
+      <br>
 
-    <h2>Vin</h2>
+      <h2>Vin</h2>
 
-        <br>
+      <br>
 
-    <h2>Te og kaffe</h2>
+      <h2>Te og kaffe</h2>
 
 
     </main>
 
-<footer>
+    <footer>
 
 
-</footer>
+    </footer>
 
-  </body>
+</body>
+
 </html>
