--- a/main.html
+++ b/main.html
@@ -12,16 +12,17 @@
 
 <body>
   <header>
-    <h1>Velkommen</h1>
-    <div id="headericons">
-      <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
-      <a href="burger"><div id="burgermenu">
-        <div class="burger"></div>
-        <div class="burger"></div>
-        <div class="burger"></div>
-      </div></a>
-    </div>
+    <h1>Naturkost</h1>
   </header>
+  <div id="fronticons">
+    <a href="burger"><div id="burgermenu">
+      <div class="burger"></div>
+      <div class="burger"></div>
+      <div class="burger"></div>
+    </div></a>
+    <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
+
+  </div>
 
     <div class="wrapper">
     <section class="container1">
