Edit kurv, javascript and styling
'kurv.html', 'javascript.js' & 'styling.css'

--- a/kurv.html
+++ b/kurv.html
@@ -12,7 +12,7 @@
   <body>
 <!-- HEADER -->
     <header>
-      <h1>KURV</h1>
+      <h1>DIN KURV</h1>
       <div id="headericons">
         <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
         <a href="burger"><div id="burgermenu">
@@ -27,7 +27,7 @@
       <section id="kurvsection">
   <!-- PRODUKT1 -->
         <div class="kurvprodukt">
-          <button type="button" name="button" class="kurvsletknap">&times;</button>
+          <button type="button" name="button" class="kurvsletknap" onclick="sletProdukt()>&times;</button>
           <div class="kurvbillede">
             <img src="img/ikoner/mad.png" alt="kurvproduktbillede">
           </div>
