--- a/mad.html
+++ b/mad.html
@@ -6,6 +6,7 @@
   <link href="styling.css" rel="stylesheet" type="text/css">
   <meta name="description" content="Økologiske produkter">
   <meta name="keywords" content="sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevare,biodynamisk,velvære,naturkost">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Naturkost Odense - Mad</title>
 </head>
