Change kurv and CSS
'kurv.html' & 'styling.css'

--- a/kurv.html
+++ b/kurv.html
@@ -27,7 +27,7 @@
       <section id="kurvsection">
   <!-- PRODUKT1 -->
         <div class="kurvprodukt">
-          <button type="button" name="button" class="kurvsletknap" onclick="sletProdukt()>&times;</button>
+          <button type="button" name="button" class="kurvsletknap">&times;</button>
           <div class="kurvbillede">
             <img src="img/ikoner/mad.png" alt="kurvproduktbillede">
           </div>
