--- a/andet.html
+++ b/andet.html
@@ -1,16 +1,38 @@
 <!DOCTYPE html>
 <html lang=da dir="ltr">
-  <head>
-    <meta charset="utf-8">
-       <title>Naturkost Odense</title>
-        <meta name=”description” content=”Økologiske produkter”>
-        <meta name=”keywords” content=”sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevarer,biodynamisk,velvære,naturkost”>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="styling.css" rel="stylesheet" type="text/css">
-  </head>
-  <body>
-    <main>
-        <h1>Andet</h1>
-    </main>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Naturkost Odense - Andet</title>
+  <meta name=”description” content=”Økologiske produkter”>
+  <meta name=”keywords” content=”sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevarer,biodynamisk,velvære,naturkost”>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="styling.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+  <header>
+    <h1>Andet</h1>
+    <div id="headericons">
+      <img src="img/ikoner/kurv.png" alt="kurv">
+      <a href="burger">
+        <div id="burgermenu">
+          <div class="burger"></div>
+          <div class="burger"></div>
+          <div class="burger"></div>
+        </div>
+  </header>
+
+  <ul class="menu">
+    <li><a href="mad.html">Gaveartikler</a></li>
+    <li><a href="mad.html">Spirituelt</a></li>
+    <li><a href="mad.html">Bøger</a></li>
+    <li><a href="mad.html">Film</a></li>
+
+    <footer>
+      <p>&copy Naturkost 2020</p>
+    </footer>
+
+</body>
+
 </html>
