--- a/hverdag.html
+++ b/hverdag.html
@@ -1,22 +1,38 @@
 <!doctype html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<title>hverdag html</title>
-
-	<h1>HVERDAG</h1>
-
+	<meta charset="utf-8">
+	<title>Naturkost Odense - Hverdag</title>
+	<meta name=”description” content=”Økologiske produkter”>
+	<meta name=”keywords” content=”sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevarer,biodynamisk,velvære,naturkost”>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="styling.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+	<header>
+		<h1>HVERDAG</h1>
+		<div id="headericons">
+			<img src="img/ikoner/kurv.png" alt="kurv">
+			<a href="burger">
+				<div id="burgermenu">
+					<div class="burger"></div>
+					<div class="burger"></div>
+					<div class="burger"></div>
+				</div>
+	</header>
 
-	<h2>TØJ</h2>
-	<h2>RENGØRING</h2>
-	<h2>KÆLEDYR</h2>
+
+	<ul class="menu">
+    <li><a href="mad.html">Tøj</a></li>
+    <li><a href="mad.html">Rengøring</a></li>
+    <li><a href="mad.html">Kæledyr</a></li>
 
 	<h3>TØJ</h3>
 	<h3>RENGØRING</h3>
 	<h3>KÆLEDYR</h3>
 
 </body>
+
 </html>
