--- a/sundhed.html
+++ b/sundhed.html
@@ -4,7 +4,7 @@
   <head>
 
     <meta charset="utf-8">
-	  <title>Naturkost Odense - Sundhed</title>
+	  <title>Sundhed - Naturkost Odense</title>
     <link href="styling.css" rel="stylesheet" type="text/css">
     <meta name=”description” content="Økologiske produkter">
     <meta name=”keywords” content=”sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevarer,biodynamisk,velvære,naturkost”>
