--- a/andet.html
+++ b/andet.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Naturkost Odense - Andet</title>
+  <title>Andet - Naturkost Odense</title>
   <meta name=”description” content=”Økologiske produkter”>
   <meta name=”keywords” content=”sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevarer,biodynamisk,velvære,naturkost”>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
