--- a/mad.html
+++ b/mad.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevare,biodynamisk,velvære,naturkost">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Naturkost Odense - Mad</title>
+  <title>Mad - Naturkost Odense</title>
 </head>
 
 <body>
