--- a/hverdag.html
+++ b/hverdag.html
@@ -11,10 +11,12 @@
 </head>
 
 <body>
+<!-- HEADER -->
 	<header>
 		<h1>HVERDAG</h1>
 		<div id="headericons">
 			<img src="img/ikoner/kurv.png" alt="kurv">
+	<!-- BURGER -->
 			<a href="burger">
 				<div id="burgermenu">
 					<div class="burger"></div>
@@ -22,16 +24,20 @@
 					<div class="burger"></div>
 				</div>
 	</header>
-
-
+<!-- MENU -->
 	<ul class="menu">
     <li><a href="mad.html">Tøj</a></li>
     <li><a href="mad.html">Rengøring</a></li>
     <li><a href="mad.html">Kæledyr</a></li>
-
-	<h3>TØJ</h3>
-	<h3>RENGØRING</h3>
-	<h3>KÆLEDYR</h3>
+	</ul>
+<!-- MAIN -->
+	<main>
+		<h3>TØJ</h3>
+		<h3>RENGØRING</h3>
+		<h3>KÆLEDYR</h3>
+	</main>
+<!-- FOOTER -->
+<footer></footer>
 
 </body>
 
