--- a/mad.html
+++ b/mad.html
@@ -7,33 +7,26 @@
   <meta name="description" content="Økologiske produkter">
   <meta name="keywords" content="sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevare,biodynamisk,velvære,naturkost">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>Mad - Naturkost Odense</title>
 </head>
-
 <body>
-
+<!-- HEADER -->
   <header>
-
     <h1>Mad</h1>
-
     <div id="headericons">
       <img src="img/ikoner/kurv.png" alt="kurv">
+  <!-- BURGERMENU -->
       <a href="burger">
         <div id="burgermenu">
           <div class="burger"></div>
           <div class="burger"></div>
           <div class="burger"></div>
         </div>
-
       </a>
-
     </div>
-
   </header>
-
+<!-- MENU -->
   <ul class="menu">
-
     <li><a href="mad.html">Frugt og Grøn</a></li>
     <li><a href="mad.html">Grød</a></li>
     <li><a href="mad.html">Mel</a></li>
@@ -41,43 +34,24 @@
     <li><a href="mad.html">Saft</a></li>
     <li><a href="mad.html">Vin</a></li>
     <li><a href="mad.html">Te og Kaffe</a></li>
-
+  </ul>
+<!-- MAIN -->
     <main>
       <h2>Frugt og grøn</h2>
-
-
       <br>
-
       <h2>Grød</h2>
-
       <br>
-
       <h2>Mel</h2>
-
       <br>
-
       <h2>Pasta</h2>
-
       <br>
-
       <h2>Saft</h2>
-
       <br>
-
       <h2>Vin</h2>
-
       <br>
-
       <h2>Te og kaffe</h2>
-
-
     </main>
-
-    <footer>
-
-
-    </footer>
-
+<!-- FOOTER -->
+    <footer></footer>
 </body>
-
 </html>
