Edit CSS, add hylde(r), edit/add HTML
'andet.html', 'hverdag.html', 'kontakt.html', 'kurv.html', 'mad.html', 'main.html', 'omnaturkost.html', 'styling.css' & 'sundhed.html'

--- a/andet.html
+++ b/andet.html
@@ -8,6 +8,7 @@
   <meta name=”keywords” content=”sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevarer,biodynamisk,velvære,naturkost”>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="styling.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
