--- a/kurv.html
+++ b/kurv.html
@@ -15,6 +15,7 @@
       <h1>DIN KURV</h1>
       <div id="headericons">
         <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
+  <!-- BURGERMENU -->
         <a href="burger"><div id="burgermenu">
           <div class="burger"></div>
           <div class="burger"></div>
@@ -75,6 +76,8 @@
       </section>
     </main>
 <!-- FOOTER -->
-    <footer></footer>
+    <footer>
+      <p>&copy Naturkost 2020</p>
+    </footer>
   </body>
 </html>
