--- a/mad.html
+++ b/mad.html
@@ -7,12 +7,13 @@
   <meta name="description" content="Økologiske produkter">
   <meta name="keywords" content="sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevare,biodynamisk,velvære,naturkost">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <title>Mad - Naturkost Odense</title>
 </head>
 <body>
 <!-- HEADER -->
   <header>
-    <h1>Mad</h1>
+    <h1>MAD</h1>
     <div id="headericons">
       <img src="img/ikoner/kurv.png" alt="kurv">
   <!-- BURGERMENU -->
@@ -27,31 +28,34 @@
   </header>
 <!-- MENU -->
   <ul class="menu">
-    <li><a href="mad.html">Frugt og Grøn</a></li>
-    <li><a href="mad.html">Grød</a></li>
-    <li><a href="mad.html">Mel</a></li>
-    <li><a href="mad.html">Pasta</a></li>
-    <li><a href="mad.html">Saft</a></li>
-    <li><a href="mad.html">Vin</a></li>
-    <li><a href="mad.html">Te og Kaffe</a></li>
+    <li><a href="#frugtoggroent">Frugt og Grøn</a></li>
+    <li><a href="#groed">Grød</a></li>
+    <li><a href="#mel">Mel</a></li>
+    <li><a href="#pasta">Pasta</a></li>
+    <li><a href="#saft">Saft</a></li>
+    <li><a href="#vin">Vin</a></li>
+    <li><a href="#teogkaffe">Te og Kaffe</a></li>
   </ul>
 <!-- MAIN -->
     <main>
-      <h2>Frugt og grøn</h2>
-      <br>
-      <h2>Grød</h2>
-      <br>
-      <h2>Mel</h2>
-      <br>
-      <h2>Pasta</h2>
-      <br>
-      <h2>Saft</h2>
-      <br>
-      <h2>Vin</h2>
-      <br>
-      <h2>Te og kaffe</h2>
+      <h2 id="frugtoggroent">Frugt og grøn</h2>
+      <div class="hylde"></div>
+      <h2 id="groed">Grød</h2>
+      <div class="hylde"></div>
+      <h2 id="mel">Mel</h2>
+      <div class="hylde"></div>
+      <h2 id="pasta">Pasta</h2>
+      <div class="hylde"></div>
+      <h2 id="saft">Saft</h2>
+      <div class="hylde"></div>
+      <h2 id="vin">Vin</h2>
+      <div class="hylde"></div>
+      <h2 id="teogkaffe">Te og kaffe</h2>
+      <div class="hylde"></div>
     </main>
 <!-- FOOTER -->
-    <footer></footer>
+    <footer>
+      <p>&copy Naturkost 2020</p>
+    </footer>
 </body>
 </html>
