--- a/omnaturkost.html
+++ b/omnaturkost.html
@@ -1,44 +1,52 @@
 <!DOCTYPE html>
-<html>
 <html lang=da dir="ltr">
   <head>
-	<meta charset="utf-8">
-	   <title>Om Naturkost Odense</title>
-      <meta name=”description” content=”Økologiske produkter”>
-      <meta name=”keywords” content=”sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevarer,biodynamisk,velvære,naturkost”>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-      <link href="styling.css" rel="stylesheet" type="text/css">
+	  <meta charset="utf-8">
+    <title>Om Naturkost Odense</title>
+    <meta name=”description” content=”Økologiske produkter”>
+    <meta name=”keywords” content=”sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevarer,biodynamisk,velvære,naturkost”>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styling.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   </head>
-
   <body>
+<!-- HEADER -->
+    <header>
+      <h1>OM NATURKOST</h1>
+      <div id="headericons">
+        <img src="img/ikoner/kurv.png" alt="kurv">
+  <!-- BURGERMENU -->
+        <a href="burger">
+          <div id="burgermenu">
+            <div class="burger"></div>
+            <div class="burger"></div>
+            <div class="burger"></div>
+          </div>
+        </a>
+      </div>
+    </header>
+<!-- MAIN -->
     <main>
-
       <nav>
         <div class="logo">
           <img src="logo/naturkostlogo.png" alt="Naturkost Odense" height="100%px" width="100%">
         </div>
-
         <div class="kurv">
           <img src="iconer/kurv.png" alt="tryk her for at se din kurv" height="10px" width="10px">
         </div>
-
         <div class="menu">
           <img src="iconer/menuicon.png" alt="tryk her for at se menu" height="10px" width="10px">
         </div>
-
       </nav>
-
       <div>
         <video id="video1" src="video/prøvemedmusik.mp4" width="800" controls </video>
       </div>
-
-      <h2>Om Naturkost</h2>
-
+      <h1>Om Naturkost</h1>
       <p> hej hej hej </p>
-
-
     </main>
+<!-- FOOTER -->
+    <footer>
+      <p>&copy Naturkost 2020</p>
+    </footer>
   </body>
-
 </html>
