--- a/hverdag.html
+++ b/hverdag.html
@@ -1,44 +1,47 @@
 <!doctype html>
 <html>
+	<head>
+		<meta charset="utf-8">
+		<title>Hverdag - Naturkost Odense</title>
+		<meta name=”description” content=”Økologiske produkter”>
+		<meta name=”keywords” content=”sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevarer,biodynamisk,velvære,naturkost”>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="styling.css" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+	</head>
 
-<head>
-	<meta charset="utf-8">
-	<title>Hverdag - Naturkost Odense</title>
-	<meta name=”description” content=”Økologiske produkter”>
-	<meta name=”keywords” content=”sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevarer,biodynamisk,velvære,naturkost”>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="styling.css" rel="stylesheet" type="text/css">
-</head>
-
-<body>
-<!-- HEADER -->
-	<header>
-		<h1>HVERDAG</h1>
-		<div id="headericons">
-			<img src="img/ikoner/kurv.png" alt="kurv">
-	<!-- BURGER -->
-			<a href="burger">
-				<div id="burgermenu">
-					<div class="burger"></div>
-					<div class="burger"></div>
-					<div class="burger"></div>
-				</div>
-	</header>
-<!-- MENU -->
-	<ul class="menu">
-    <li><a href="mad.html">Tøj</a></li>
-    <li><a href="mad.html">Rengøring</a></li>
-    <li><a href="mad.html">Kæledyr</a></li>
-	</ul>
-<!-- MAIN -->
-	<main>
-		<h3>TØJ</h3>
-		<h3>RENGØRING</h3>
-		<h3>KÆLEDYR</h3>
-	</main>
-<!-- FOOTER -->
-<footer></footer>
-
-</body>
-
+	<body>
+	<!-- HEADER -->
+		<header>
+			<h1>HVERDAG</h1>
+			<div id="headericons">
+				<img src="img/ikoner/kurv.png" alt="kurv">
+		<!-- BURGERMENU -->
+				<a href="burger">
+					<div id="burgermenu">
+						<div class="burger"></div>
+						<div class="burger"></div>
+						<div class="burger"></div>
+					</div>
+		</header>
+	<!-- MENU -->
+		<ul class="menu">
+	    <li><a href="#toej">Tøj</a></li>
+	    <li><a href="#rengoering">Rengøring</a></li>
+	    <li><a href="#kealedyr">Kæledyr</a></li>
+		</ul>
+	<!-- MAIN -->
+		<main>
+			<h2 id="#toej">TØJ</h2>
+			<div class="hylde"></div>
+			<h2 id="rengoering">RENGØRING</h2>
+			<div class="hylde"></div>
+			<h2 id="kealedyr">KÆLEDYR</h2>
+			<div class="hylde"></div>
+		</main>
+	<!-- FOOTER -->
+		<footer>
+			<p>&copy Naturkost 2020</p>
+		</footer>
+	</body>
 </html>
