--- a/kontakt.html
+++ b/kontakt.html
@@ -14,6 +14,7 @@
       <h1>KONTAKT</h1>
       <div id="headericons">
         <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
+  <!-- BURGERMENU -->
         <a href="burger"><div id="burgermenu">
           <div class="burger"></div>
           <div class="burger"></div>
@@ -44,6 +45,8 @@
       </section>
     </main>
 <!-- FOOTER -->
-    <footer></footer>
+    <footer>
+      <p>&copy Naturkost 2020</p>
+    </footer>
   </body>
 </html>
