--- a/sundhed.html
+++ b/sundhed.html
@@ -1,81 +1,51 @@
 <!DOCTYPE html>
 <html>
-
   <head>
-
     <meta charset="utf-8">
 	  <title>Sundhed - Naturkost Odense</title>
     <link href="styling.css" rel="stylesheet" type="text/css">
     <meta name=”description” content="Økologiske produkter">
     <meta name=”keywords” content=”sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevarer,biodynamisk,velvære,naturkost”>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-      html {
-        scroll-behavior: smooth;
-        }
-      body {
-          background-color: #F4DDC0;
-        }
-
-      @media screen and (min-width: 480px) {
-
-      }
-
-    </style>
     <link rel="" type="text/css" href="css.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   </head>
-
   <body>
-
-      <header>
-
-        <h1>SUNDHED</h1>
-
-        <div id="headericons">
-          <img src="img/ikoner/kurv.png" alt="kurv">
-          <a href="burger">
-            <div id="burgermenu">
-              <div class="burger"></div>
-              <div class="burger"></div>
-              <div class="burger"></div>
-            </div>
-
-          </a>
-
-        </div>
-
-      </header>
-
-      <ul class="menu">
-
-        <li><a href="#vitamintilskud">TILSKUD</a></li>
-        <li><a href="#lægemidler">LÆGEMIDLER</a></li>
-        <li><a href="#cremer">CREMER</a></li>
-      </ul>
-
-        <main>
-          <h2 id="vitamintilskud">VITAMINTILSKUD</h2>
-
-          <br>
-
-          <h2 id="kosttilskud">KOSTTILSKUD</h2>
-
-          <br>
-
-          <h2 id="lægemidler">LÆGEMIDLER</h2>
-
-          <br>
-
-          <h2 id="cremer">CREMER</h2>
-
-          <br>
-
-        </main>
-
-        <footer>
-        </footer>
-
+<!-- HEADER -->
+    <header>
+      <h1>SUNDHED</h1>
+      <div id="headericons">
+        <img src="img/ikoner/kurv.png" alt="kurv">
+  <!-- BURGERMENU -->
+        <a href="burger">
+          <div id="burgermenu">
+            <div class="burger"></div>
+            <div class="burger"></div>
+            <div class="burger"></div>
+          </div>
+        </a>
+      </div>
+    </header>
+<!-- MENU -->
+    <ul class="menu">
+      <li><a href="#vitamintilskud">TILSKUD</a></li>
+      <li><a href="#lægemidler">LÆGEMIDLER</a></li>
+      <li><a href="#cremer">CREMER</a></li>
+    </ul>
+<!-- MAIN -->
+    <main>
+      <h2 id="vitamintilskud">VITAMINTILSKUD</h2>
+      <div class="hylde"></div>
+      <h2 id="kosttilskud">KOSTTILSKUD</h2>
+      <div class="hylde"></div>
+      <h2 id="lægemidler">LÆGEMIDLER</h2>
+      <div class="hylde"></div>
+      <h2 id="cremer">CREMER</h2>
+      <div class="hylde"></div>
+    </main>
+<!-- FOOTER -->
+    <footer>
+      <p>&copy Naturkost 2020</p>
+    </footer>
   </body>
-
 </html>
