Edit java, kurv and CSS
'javascript.js', 'kurv.html' & 'styling.css'

--- a/kurv.html
+++ b/kurv.html
@@ -27,8 +27,8 @@
     <main id="kurv">
       <section id="kurvsection">
   <!-- PRODUKT1 -->
-        <div class="kurvprodukt">
-          <button type="button" name="button" class="kurvsletknap">&times;</button>
+        <div id="kurvprodukt1">
+          <button type="button" name="button" class="kurvsletknap" onclick="sletProdukt1()">&times;</button>
           <div class="kurvbillede">
             <img src="img/ikoner/mad.png" alt="kurvproduktbillede">
           </div>
@@ -41,8 +41,8 @@
           <input type="button" class="kurvproduktpris" value="150" id="produktpris1">
         </div>
   <!-- PRODUKT2 -->
-        <div class="kurvprodukt">
-          <button type="button" name="button" class="kurvsletknap">&times;</button>
+        <div id="kurvprodukt2">
+          <button type="button" name="button" class="kurvsletknap" onclick="sletProdukt2()">&times;</button>
           <div class="kurvbillede">
             <img src="img/ikoner/hverdag.png" alt="kurvproduktbillede">
           </div>
@@ -55,8 +55,8 @@
           <input type="button" class="kurvproduktpris" value="250" id="produktpris2">
         </div>
   <!-- PRODUKT3 -->
-        <div class="kurvprodukt">
-          <button type="button" name="button" class="kurvsletknap">&times;</button>
+        <div id="kurvprodukt3">
+          <button type="button" name="button" class="kurvsletknap" onclick="sletProdukt3()">&times;</button>
           <div class="kurvbillede">
             <img src="img/ikoner/sundhed.png" alt="kurvproduktbillede">
           </div>
