Rigtige billeder af produkter

--- a/hverdag.html
+++ b/hverdag.html
@@ -4,19 +4,49 @@
 <meta charset="utf-8">
 <title>hverdag html</title>
 	
-	<h1>HVERDAG</h1>
+	<link href="../../../Projekt 4/html/hverdag.css" rel="stylesheet" type="text/css">
+<h1>HVERDAG</h1>
 	
 </head>
 	
 <body>
 	
+	
+	<div class="h2">
 	<h2>TØJ</h2>
 	<h2>RENGØRING</h2>
 	<h2>KÆLEDYR</h2>
+	</div>
 	
-	<h3>TØJ</h3>
-	<h3>RENGØRING</h3>
-	<h3>KÆLEDYR</h3>
+	
+	<div class="boxtøj">
+	
+		<h3>TØJ</h3>
+		<img src="../../../Projekt 4/Billeder til produkter/Tøj/bodystocking.png" alt="kort bodystocking">
+		<img src="../../../Projekt 4/Billeder til produkter/Tøj/bukser.png" alt="blomstrede bukser">
+		<img src="../../../Projekt 4/Billeder til produkter/Tøj/jakke.png" alt="jakke med hætte">
+		<img src="../../../Projekt 4/Billeder til produkter/Tøj/kjole.png" alt="kjole med blomster">
+		<img src="../../../Projekt 4/Billeder til produkter/Tøj/top.png" alt="hue med striber">
+		<img src="../../../Projekt 4/Billeder til produkter/Tøj/tshirt.png" alt="stribet t-shirt">	
+	</div>
+	
+	
+	<div class="boxrengøring">
+		<h3>RENGØRING</h3>
+		<img src="../../../Projekt 4/Billeder til produkter/Rengøring/almawin.png" alt="almawin">
+		<img src="../../../Projekt 4/Billeder til produkter/Rengøring/foodwastebags.png" alt="affaldsposer">
+		<img src="../../../Projekt 4/Billeder til produkter/Rengøring/soap.png" alt="sæbe">
+		<img src="../../../Projekt 4/Billeder til produkter/Rengøring/toiletbørste.png" alt="toiletbørste">
+		<img src="../../../Projekt 4/Billeder til produkter/Rengøring/tøjklemmer.png" alt="tøjklemmer">
+		<img src="../../../Projekt 4/Billeder til produkter/Rengøring/vaskemiddel.png" alt="vaskemiddel">	
+	</div>
+	
+	
+	<div class="boxkæledyr">
+		<h3>KÆLEDYR</h3>
+		<img src="../../../Projekt 4/Billeder til produkter/Kæledyr/agiovet.png" alt="agiovet">
+		<img src="../../../Projekt 4/Billeder til produkter/Kæledyr/flora.png" alt="MSM lignisul">
+	</div>
 	
 </body>
 </html>
