Change img in hverdag and img size in CSS
'hverdag.html' & 'styling.css'

--- a/hverdag.html
+++ b/hverdag.html
@@ -34,26 +34,26 @@
 	<!-- MAIN -->
 		<main>
 			<h2 id="#toej">TØJ</h2>
-			<img src="../../../Projekt 4/Billeder til produkter/Tøj/bodystocking.png" alt="kort bodystocking">
-			<img src="../../../Projekt 4/Billeder til produkter/Tøj/bukser.png" alt="blomstrede bukser">
-			<img src="../../../Projekt 4/Billeder til produkter/Tøj/jakke.png" alt="jakke med hætte">
-			<img src="../../../Projekt 4/Billeder til produkter/Tøj/kjole.png" alt="kjole med blomster">
-			<img src="../../../Projekt 4/Billeder til produkter/Tøj/top.png" alt="hue med striber">
-			<img src="../../../Projekt 4/Billeder til produkter/Tøj/tshirt.png" alt="stribet t-shirt">
+			<img src="img/hverdag/bodystocking.png" alt="kort bodystocking">
+			<img src="img/hverdag/bukser.png" alt="blomstrede bukser">
+			<img src="img/hverdag/jakke.png" alt="jakke med hætte">
+			<img src="img/hverdag/kjole.png" alt="kjole med blomster">
+			<img src="img/hverdag/top.png" alt="hue med striber">
+			<img src="img/hverdag/tshirt.png" alt="stribet t-shirt">
 			<div class="hylde"></div>
 
 			<h2 id="rengoering">RENGØRING</h2>
-			<img src="../../../Projekt 4/Billeder til produkter/Rengøring/almawin.png" alt="almawin">
-			<img src="../../../Projekt 4/Billeder til produkter/Rengøring/foodwastebags.png" alt="affaldsposer">
-			<img src="../../../Projekt 4/Billeder til produkter/Rengøring/soap.png" alt="sæbe">
-			<img src="../../../Projekt 4/Billeder til produkter/Rengøring/toiletbørste.png" alt="toiletbørste">
-			<img src="../../../Projekt 4/Billeder til produkter/Rengøring/tøjklemmer.png" alt="tøjklemmer">
-			<img src="../../../Projekt 4/Billeder til produkter/Rengøring/vaskemiddel.png" alt="vaskemiddel">
+			<img src="img/hverdag//almawin.png" alt="almawin">
+			<img src="img/hverdag//foodwastebags.png" alt="affaldsposer">
+			<img src="img/hverdag/soap.png" alt="sæbe">
+			<img src="img/hverdag//toiletbørste.png" alt="toiletbørste">
+			<img src="img/hverdag//tøjklemmer.png" alt="tøjklemmer">
+			<img src="img/hverdag//vaskemiddel.png" alt="vaskemiddel">
 			<div class="hylde"></div>
 
 			<h2 id="kealedyr">KÆLEDYR</h2>
-			<img src="../../../Projekt 4/Billeder til produkter/Kæledyr/agiovet.png" alt="agiovet">
-			<img src="../../../Projekt 4/Billeder til produkter/Kæledyr/flora.png" alt="MSM lignisul">
+			<img src="img/hverdag//agiovet.png" alt="agiovet">
+			<img src="img/hverdag//flora.png" alt="MSM lignisul">
 			<div class="hylde"></div>
 		</main>
 	<!-- FOOTER -->
